--- a/functions/package.json
+++ b/functions/package.json
@@ -11,12 +11,13 @@
     "build": "echo \"No build step needed\""
   },
   "engines": {
-    "node": "22"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.3.1"
+    "firebase-functions": "^4.0.0",
+    "firebase-admin": "^11.0.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.78"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
