--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "keddi-foci-app"
-  }
+    "default": "keddi-foci-app",
+    "keddi-foci-app": "keddi-foci-app"
+  },
+  "targets": {},
+  "etags": {}
 }
