--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.3.1",
+    "npm": "^11.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.29.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
