--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^11.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.29.0",
